tests/jsonnet/pass/internal_merge.jsonnet
{ a: { x: 1 }, b: { x: 2 } } + { a+: { y: 3 }, b: { x: 3 } }
