tests/jsonnet/errors/object_comprehension2.jsonnet
{ [x + ""]: if x == 1 then 1 else x + $["1"] for x in [1, 2, 3] }
